# domain-synth-auditor-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: governance.md  product-proposal.md  system-design.md
docs/diagrams/: c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/specs/: agent-orchestrator.md  memory-context.md  observability-evals.md  retriever.md  serving-config.md  tools-apis.md
evals/: golden_set.yaml  intent_golden_set.yaml
projects/broken_playgrounds/: audit_rubric.yaml  domain.yaml  object_catalog.yaml  reference_annotations.yaml  scene_catalog.yaml
projects/tv_settings/: audit_rubric.yaml  domain.yaml  object_catalog.yaml  reference_annotations.yaml  scene_catalog.yaml
projects/wb_pvz/: audit_rubric.yaml  domain.yaml  object_catalog.yaml  reference_annotations.yaml  scene_catalog.yaml
scripts/: init_db.sql  run_batch.py  run_evals.py  run_from_db.py  run_intent_evals.py  smoke_test.py
src/auditor/: audit_stage.py  config.py  db_loader.py  decision_engine.py  domain_spec.py  experiment_store.py  image_loader.py  intent_resolver.py  knowledge_base.py  memory_store.py  model_gateway.py  pipeline.py  prompt_builder.py  prompt_improver.py
